# slint-kickstart

./: .aiexclude  Cargo.toml  README.md  build.rs
assets/: resources.rc
src/: main.rs
ui/: app-window.slint
