[package]
name = "slinttest"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.14.0" # Use the version matching your slint-build

[build-dependencies]
slint-build = "1.14.0"
embed-resource = "2.5"

[package.metadata.bundle]
name = "SlintTest"
identifier = "com.yerlibilgin.slinttest"
icon = ["assets/32.png", "assets/128.png", "assets/256.png"]
category = "Developer Tool"

[profile.release]
opt-level = 'z'
strip = true
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = true
